Fixed not working on iexplorer

--- a/static/styles.css
+++ b/static/styles.css
@@ -37,19 +37,12 @@ a:hover, a:active {
 }
 
 
-/*#table-buttons {
-    width: 600px;
-    margin-left: auto;
-    margin-right: auto;
-}*/
-
 #main-form {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
     padding-bottom: auto;
     width: 585px;
-    margin-top: 4%;
     margin-left: auto;
     margin-right: auto;
 }
